# seq_labeling_ner

./: README.md  pyproject.toml  train.sh
configs/: config.yaml  config_bert-crf.yaml  config_bert-lstm-crf.yaml  config_bert-lstm.yaml  config_crf.yaml
scripts/: conll2003.py
src/: __init__.py  argparser.py  config.py  main.py  main_modern.py  model.py  predict.py
src/cli/: run.py
src/data/: __init__.py  collator.py  dataset.py  preprocessor.py  tokenizer.py
src/evaluation/: __init__.py  eval.py  seqeval.py
src/modeling/: __init__.py  base.py  crf.py  encoder.py  model_output.py  pooler.py
src/models/: __init__.py  bert.py  crf.py  modern_bert.py
src/prediction/: __init__.py  pred.py
src/training/: __init__.py  trainer.py
tests/: test_base.py  test_collator.py  test_dataset.py  test_encoder.py  test_evaluation.py  test_model.py  test_prediction.py  test_preprocessor.py  test_trainer.py
tests/test_data/: dataset_toy.jsonl
