[project]
name = "seq-labeling-ner"
version = "0.1.0"
description = "Sequential labeling based named entity recognition toolkit"
readme = "README.md"
authors = [{ name = "Yuya Sawada", email = "sawada.yuya.sr7@naist.ac.jp" }]
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.3.2",
    "fugashi>=1.4.0",
    "protobuf>=5.29.3",
    "sentencepiece>=0.2.0",
    "seqeval>=1.2.2",
    "spacy-alignments>=0.9.1",
    "torch>=2.6.0",
    "transformers[torch]>=4.49.0",
    "unidic-lite>=1.0.8",
    "wandb>=0.19.10",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.4",
]


[tool.pytest.ini_options]
testpaths = ["tests",]
filterwarnings = ["ignore::DeprecationWarning", "ignore::FutureWarning"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
